Fixed issue on rental page, where carselected was not aligned correctly with display.

--- a/src/components/Rental/Rental.css
+++ b/src/components/Rental/Rental.css
@@ -325,6 +325,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   gap: 10px;
   margin-bottom: 20px;
